# match_pdf

./: Cargo.toml  README.md
installerFiles/: afterInstallation.txt  beforeInstallation.txt  matchpdf.iss
licenseFiles/: MatchPDFLicense.txt  NOTICE  Readme.txt
src/: common.rs  images.rs  main.rs
