[package]
name = "match_pdf"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
image = "0.24.6"
pdfium-render = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5.0", features = ["v4"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
magic-crypt = { version = "3.1.13"}